--- a/enter input.html
+++ b/enter input.html
@@ -10,10 +10,13 @@
 // render text input value
 $(document).ready(function() {
   $("input").keydown(function(e) {
+    let text;
     if (e.keyCode == 13) {
-      e.preventDefault();
-      $("#d1").html($(this).val());
-      $(this).val("");
+      
+     text = $(".in1").val();
+      $(".id1").html(text);
+      $(".in1").val("");
+
     }
   });
 });
